--- a/shark-bait/src/components/WorldWind.css
+++ b/shark-bait/src/components/WorldWind.css
@@ -21,6 +21,7 @@
   position: relative;
 }
 
+
 .layer-panel {
   width: 20%;
   min-width: 250px;
@@ -40,7 +41,6 @@
   border-bottom: 1px solid var(--border-dark);
   color: var(--text-dark);
 }
-
 
 .layer-control {
   margin-bottom: 16px;
@@ -231,24 +231,61 @@
 }
 
 .data-layer-sources {
-  position: absolute;
-  bottom: 0.5rem;
-  right: 0.5rem;
+  position: sticky;
   border-radius: 0.5rem;
   padding: 0.75rem 0.75rem 0.75rem 0.75rem;
   box-shadow: 2px 0 10px rgba(0, 0, 0, 0.3);
   color: #ffffff; /* Light text for contrast */
   background: white;
   border: 1px solid var(--card-border);
+  height: fit-content;
+  z-index: 0;
+  overflow: visible;
 }
 
 .dark-mode .data-layer-sources {
   background: #0a1929;
 }
 
-.worldwind {
-  position: absolute;
-  top: 0.5rem;
-  right: 0.5rem;
-  height: fit-content;
+@media (max-width: 768px) {
+  
+  .worldwind-container {
+    flex-direction: column-reverse;
+    min-width: 100%;
+    padding: 1rem;
+  }
+
+  .data-layer-sources {
+    padding: 0rem 0.5rem 0.25rem 0.5rem;
+  }
+
+  .sources-link {
+    font-size: 10px;
+  }
+
+  .neo {
+    border-radius: 0 0 0.75rem 0.75rem;
+  }
+
+  .worldwind {
+    border-radius: 0;
+  }
+  
+  .layer-panel {
+    width: 100%;
+    border-radius: 0.75rem;
+  }
+
+  .globe-container {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+
+  .globe-container {
+    border-radius: 0.75rem;
+  }
+
+  .globe-canvas {
+    border-radius: 0.75rem 0.75rem 0 0;
+  }
 }
